[package]
edition = "2021"
name = "ba-blinky"
version = "0.1.0"

[features]
h743 = ["stm32h7/stm32h743", "drv-stm32h7-startup/h743"]
h753 = ["stm32h7/stm32h753", "drv-stm32h7-startup/h753"]
dump = ["kern/dump"]

[dependencies]
cfg-if = { workspace = true }
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
stm32h7 = { workspace = true, features = ["rt"] }

drv-stm32h7-startup = {path = "../../drv/stm32h7-startup"}
kern = { path = "../../sys/kern" }

[build-dependencies]
build-util = {path = "../../build/util"}

# this lets you use `cargo fix`!
[[bin]]
name = "ba-blinky"
test = false
doctest = false
bench = false
